<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_customer"
        android:icon="@drawable/ic_customer"
        android:title="@string/customer"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_receive"
        android:icon="@drawable/ic_inbox"
        android:title="@string/receive"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_product"
        android:icon="@drawable/ic_bill"
        android:title="@string/report"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />
</menu>